Fixed opening dropdown overflowing window
When opening a dropdown at the bottom of a window it would
cause the window to become bigger rather than drop upwards.
However, after scrolling the dropdown would then move up.
This was caused by the animations having the height set to
0 when the initial calculation was performed.

--- a/src/modules/components/menu/style.scss
+++ b/src/modules/components/menu/style.scss
@@ -2,6 +2,10 @@
     display: block;
 }
 
+.ng2-dropdown-menu-container {
+    max-height: 400px;
+}
+
 .ng2-dropdown-menu {
     overflow-y: auto;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.3);
@@ -11,7 +15,6 @@
     background: #fff;
     border-radius: 1px;
 
-    max-height: 400px;
     width: 260px;
     min-height: 0;
 
